Add Left Menu To Navigation

--- a/app/src/main/res/layout/activity_single_play.xml
+++ b/app/src/main/res/layout/activity_single_play.xml
@@ -46,4 +46,16 @@
             android:layout_weight="1"/>
     </LinearLayout>
 
+
+    <FrameLayout
+        android:id="@+id/fragment_container"
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:layout_gravity="start"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:visibility="gone"
+        android:background="@color/T3"
+        tools:ignore="MissingConstraints" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
