--- a/app/src/main/res/layout/activity_single_play.xml
+++ b/app/src/main/res/layout/activity_single_play.xml
@@ -10,52 +10,74 @@
     android:background="@color/T2"
     android:padding="4dp">
 
-    <!-- Top LinearLayout for app name and image -->
     <LinearLayout
-        android:id="@+id/top_linear_layout"
+        android:id="@+id/base_linear_layout"
         android:layout_width="0dp"
-        android:layout_height="105dp"
-        android:orientation="horizontal"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
         android:background="@color/T1"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:padding="4dp">
-
+    <!-- Top LinearLayout for app name and image -->
         <LinearLayout
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="4"
-            android:gravity="center">
+            android:id="@+id/top_linear_layout"
+            android:layout_width="match_parent"
+            android:layout_height="105dp"
+            android:orientation="horizontal"
+            android:background="@color/T1"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:padding="4dp">
 
-            <TextView
-                android:id="@+id/textView"
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="4"
+                android:gravity="center">
+
+                <TextView
+                    android:id="@+id/textView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:gravity="center"
+                    android:text="@string/app_name"
+                    android:textSize="25dp"/>
+            </LinearLayout>
+
+            <ImageView
+                android:id="@+id/imageView"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:gravity="center"
-                android:text="@string/app_name"
-                android:textSize="25dp"/>
+                android:src="@drawable/ic_action_name"
+                android:onClick="activateLoginPage"
+                android:layout_weight="1"/>
         </LinearLayout>
 
-        <ImageView
-            android:id="@+id/imageView"
-            android:layout_width="wrap_content"
+        <FrameLayout
+            android:id="@+id/down_frame_layout"
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:src="@drawable/ic_action_name"
-            android:onClick="activateLoginPage"
-            android:layout_weight="1"/>
+            android:orientation="horizontal"
+            android:background="@color/T1"
+            android:padding="4dp">
+        </FrameLayout>
     </LinearLayout>
 
 
     <FrameLayout
         android:id="@+id/fragment_container"
         android:layout_width="0dp"
-        android:layout_height="match_parent"
+        android:layout_height="0dp"
         android:layout_gravity="start"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         android:visibility="gone"
-        android:background="@color/T3"
-        tools:ignore="MissingConstraints" />
+        android:background="@color/T3" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
