--- a/app/src/main/res/layout/activity_single_play.xml
+++ b/app/src/main/res/layout/activity_single_play.xml
@@ -6,7 +6,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activities.MainActivity"
+    tools:context=".activities.SinglePlay"
     android:background="@color/T2"
     android:padding="4dp">
 
@@ -30,7 +30,8 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            android:padding="4dp">
+            android:padding="4dp"
+            android:onClick="openLeftMenu">
 
             <LinearLayout
                 android:layout_width="0dp"
